# DisplayWarp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  monitor_config.json
src/: app.rs  audio.rs  main.rs  models.rs  monitor.rs  server.rs  svg_render.rs  tray.rs  window.rs
src/ui/: display_tab.rs  helpers.rs  log_tab.rs  mod.rs  monitor_preview.rs  panels.rs  quick_warp_tab.rs  settings_tab.rs  warp_tab.rs
tests/: probe_displays.rs  test_edid.rs  test_mon.rs  test_topo.rs
