[package]
name = "DisplayWarp"
version = "1.0.4"
edition = "2024"

[dependencies]
eframe = "0.29"
egui-phosphor = "0.7"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tray-icon = "0.19"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = "z"   # optimize for size
lto = true        # link-time optimization — eliminates dead code across crates
codegen-units = 1 # single codegen unit — better optimization
strip = true      # strip debug symbols and metadata
panic = "abort"   # smaller than unwinding

[build-dependencies]
winresource = "0.1.30"
