[package]
name = "DisplayWarp"
version = "1.0.6"
edition = "2024"

[package.metadata.winresource]
OriginalFilename = "DisplayWarp.exe"
LegalCopyright = "Copyright © 2026"
ProductVersion = "1.0.6"
FileVersion = "1.0.6"
FileDescription = "DisplayWarp"
CompanyName = "GradeLabs"
ProductName = "DisplayWarp"

[dependencies]
eframe = "0.33"
egui-phosphor = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tray-icon = "0.21"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = "z"   # optimize for size
lto = true        # link-time optimization — eliminates dead code across crates
codegen-units = 1 # single codegen unit — better optimization
strip = true      # strip debug symbols and metadata
panic = "abort"   # smaller than unwinding

[build-dependencies]
winresource = "0.1.30"
